2005-04-19  Ivan, Wong Yat Cheung  <email@ivanwong.info>

	* gdk/win32/gdkfont-win32.c (gdk_font_load_internal): Match
	character height instead of cell height. Fix #301228.

2005-04-18  Federico Mena Quintero  <federico@ximian.com>

	Merged from gtk-2-6:

	* gtk/gtkfilechooserdefault.c (remove_selected_bookmarks): Remove
	obsolete assertion that the selected row can't be a volume; this
	is handled by the "removable" column now.  Fixes #301017.

2005-04-18  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.c gtk/gtkcolorsel.c gtk/gtkhsv.c gtk/gtkiconview.c
	* gdk/gdkcolor.c gdk/gdkwindow.c gdk/gdkpixbuf-render.c
	gdk/gdkpango.c tests/testcairo.c: Update to new Cairo API for
	setting color and opacity. (#301066, Vincent Noel)
 
2005-04-15  Federico Mena Quintero  <federico@ximian.com>

	Merged from gtk-2-6:

	* gtk/gtkfilechooserdefault.c (pending_select_paths_process):
	Patch from Christian Neumair <chris@gnome-de.org>; only select the
	first row if we are in OPEN mode.  The only other case we were
	letting pass through was SELECT_FOLDER, but selecting the first
	row when changing folders confuses people when folders are
	actually being selected.  Fixes #171885.

2005-04-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimage.c (gtk_image_calc_size, gtk_image_expose): 
	Revert the fix for #169870, adjust the documentation instead. 

	* gtk/gtkactiongroup.c (gtk_action_group_add_action_with_accel): 
	Revert the fix for #170727.	

2005-04-11  Ivan, Wong Yat Cheung  <email@ivanwong.info>

	Fix #300218:

	* gdk/win32/gdkselection-win32.c (gdk_selection_convert): Fix
	C99ism.

	* gtk/updateiconcache.c: Guard inclusion of unistd.h and
	utime.h.

2005-04-09  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkinput-xfree.c:
	* gdk/x11/gdkinput-none.c:
	* gdk/gtk.symbols: Some more fixes necessary to 
	make building with gcc 4 work.

	Add 16x16 versions of the zoom icons and of 
	GTK_STOCK_INDEX. Some of the images were taken from 